--- a/templates/create.html
+++ b/templates/create.html
@@ -17,8 +17,17 @@
             <input type="text" name="description" placeholder="description"></input>
         </p>
         <p>
+            <label for="username">username</label>
+            <input type="text" name="username" placeholder="username"></input>
+        </p>
+        <p>
+            <label for="email">email</label>
+            <input type="text" name="email" placeholder="email"></input>
+        </p>
+        <p>
             <button type="submit">Create</button>
         </p>
+        <a href="/">Home</a>
     </form>
 </body>
 </html>
